--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
   {% endif %}
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" /> 
   
  <!-- everything has to be repeated twice because on 2016-02-01 GitHub pages migrated to jekyll 3; see bug https://github.com/jekyll/jekyll/issues/4439 -->
 
